# callbag-recharge-py

./: CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/skills/dev-dispatch/: SKILL.md
.claude/skills/qa/: SKILL.md
benchmarks/: bench_concurrency.py  bench_core.py
docs/: architecture.md  optimizations.md  roadmap.md  test-guidance.md
src/archive/docs/: DESIGN-ARCHIVE-INDEX.md  README.md  SESSION-agentic-memory-research.md  SESSION-python-port-strategy.md
src/recharge/: __init__.py
src/recharge/core/: __init__.py  bitmask.py  config.py  derived.py  dynamic_derived.py  effect.py  operator.py  pipe.py  producer.py  protocol.py  state.py  subgraph_locks.py  subscribe.py  types.py
src/recharge/extra/: __init__.py  combine.py  concat_map.py  debounce.py  distinct_until_changed.py  filter.py  flat_map.py  map.py  merge.py  replay.py  sample.py  scan.py  share.py  skip.py  switch_map.py  take.py  take_while.py  throttle.py  zip.py
src/recharge/raw/: __init__.py  _scheduling.py  _talkback.py  first_value_from.py  from_any.py  from_async_iter.py  from_awaitable.py  from_iter.py  from_timer.py  protocol.py  subscribe.py
src/recharge/utils/: __init__.py  backoff.py  retry.py  timeout.py  with_breaker.py  with_status.py
tests/: conftest.py  test_concurrency.py  test_core.py  test_extra_tier1.py  test_extra_tier2.py  test_observe.py  test_sources.py  test_utils_resilience.py
